# GERV

./: README.md
kmm/: .gitignore  CMakeLists.txt  consts.h  linter.sh  mpi_motif.cpp  mpi_motif.h
kmm-launcher-ccm-covar/: Dockerfile  README.md  README_ec2.md  download.py  postproc.r  postproc_covar.r  run.cluster.onestrand.local.r  run.cluster.onestrand.r  run.onestrand.local.r  run.onestrand.r  standalone.template.local.txt  standalone.template.txt  user-data.txt
kmm-launcher-ccm-covar/example/: auth.txt  covbinom.list  example.param.list  nrf.list  ondemand.list  param.local.list
kmm/R/: .Rhistory  postproc.r
kmm/classes/: ArrayF.h  GradArgs.cpp  GradArgs.h  GradArgsHeldout.cpp  GradArgsWorker.cpp  Loader.cpp  Loader.h
kmm/fmin/: GradFmin.cpp  GradFmin.h
kmm/git_hooks/: cpplint.py  pre-commit
kmm/postprocess/: ascending.cpp  validation.cpp
kmm/preprocess/: genome_ignore_n.cpp  reads.cpp
kmm/scoring/: padded_genome.py  score.sh  to_csv.py
kmm/util/: file_ops.cpp  util.cpp  util.h
variant-scoring/: Dockerfile  README.md  build_image_covar.sh  kmersnp_module.m  makeExecutable.sh  run.r  run_model.sh
variant-scoring/examples/: params.list
variant-scoring/seq_data/: chr1.size.txt  chr10.size.txt  chr11.size.txt  chr12.size.txt  chr13.size.txt  chr14.size.txt  chr15.size.txt  chr16.size.txt  chr17.size.txt  chr18.size.txt  chr19.size.txt  chr2.size.txt  chr20.size.txt  chr22.size.txt  chr3.size.txt  chr4.size.txt  chr5.size.txt  chr6.size.txt  chr7.size.txt  chr8.size.txt  chr9.size.txt
variant-scoring/snp-kmer-scoring/: aggregateKmer.m  (+5 more)
(+8 files in other folders)
